force-app/main/default/objects/Training__c/fields/Assigned_Trainer_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Trainer_Email__c</fullName>
    <description>Used in the Training Checklist DocuSign templates to identify the Trainer’s email address.</description>
    <formula>CASE(
    TEXT(Educator_Type__c),

    &quot;CPT&quot;, External_Trainer__r.PersonContact.Email,
    &quot;CC&quot;,  External_Trainer__r.PersonContact.Email,

    &quot;IT&quot;,  IF(ISBLANK(Internal_Trainer__c), 
              CSM__r.Email, 
              Internal_Trainer__r.Email),

    &quot;CTS&quot;, IF(ISBLANK(Internal_Trainer__c), 
              CSM__r.Email, 
              Internal_Trainer__r.Email),

    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Trainer Email</label>
    <type>Text</type>
</CustomField>