force-app/main/default/objects/Training__c/fields/Assigned_Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Trainer_Name__c</fullName>
    <description>Used in the Training Checklist DocuSign templates to identify the Trainer’s name.</description>
    <formula>CASE(
    TEXT(Educator_Type__c),
    
    &quot;CPT&quot;, External_Trainer__r.FirstName &amp; &quot; &quot;  &amp; External_Trainer__r.LastName,
    &quot;CC&quot;,  External_Trainer__r.FirstName &amp; &quot; &quot;  &amp; External_Trainer__r.LastName,
    
    &quot;IT&quot;,  IF(ISBLANK(Internal_Trainer__c), 
              CSM__r.FirstName &amp; &quot; &quot; &amp; CSM__r.LastName, 
              Internal_Trainer__r.FirstName &amp; &quot; &quot; &amp; Internal_Trainer__r.LastName),
              
    &quot;CTS&quot;, IF(ISBLANK(Internal_Trainer__c), 
              CSM__r.FirstName &amp; &quot; &quot; &amp; CSM__r.LastName, 
              Internal_Trainer__r.FirstName &amp; &quot; &quot; &amp; Internal_Trainer__r.LastName),
              
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Trainer Name</label>
    <type>Text</type>
</CustomField>