force-app/main/default/objects/Training__c/fields/Available_Training_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Available_Training_Site_Url__c</fullName>
    <formula>&quot;https://&quot; +
MID($Api.Partner_Server_URL_600,
FIND(&quot;://&quot;, $Api.Partner_Server_URL_600) + 3,
FIND(&quot;.my.salesforce.com&quot;, $Api.Partner_Server_URL_600) - FIND(&quot;://&quot;, $Api.Partner_Server_URL_600) - 3
) +
&quot;.my.site.com/TrainerPortal/available-trainings&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Training Site Url</label>
    <type>Text</type>
</CustomField>