force-app/main/default/objects/Training__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User Record of the CSM assigned to territory of the Customer</inlineHelpText>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>