force-app/main/default/objects/Training__c/fields/CSM_Email__c.field-meta.xml
<CustomField>
    <fullName>CSM_Email__c</fullName>
    <formula>CSM__r.Email</formula>
    <label>CSM Email</label>
    <type>Text</type>
</CustomField>