force-app/main/default/objects/Training__c/fields/Decline_Comments__c.field-meta.xml
<CustomField>
    <fullName>Decline_Comments__c</fullName>
    <description>Captures additional comments for declining a Training with Reason as Other.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Decline Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>