force-app/main/default/objects/Training__c/fields/Educator_Type__c.field-meta.xml
<CustomField>
    <fullName>Educator_Type__c</fullName>
    <description>Defines the training format and/or the educator that will deliver the training</description>
    <label>Educator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>CTS</fullName>
            </value>
            <value>
                <fullName>OH</fullName>
                <isActive>false</isActive>
                <label>OH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>