force-app/main/default/objects/Training__c/fields/Effective_Training_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Effective_Training_Team_Member__c</fullName>
    <description>Derives the trainer name based on the External Trainer and CSM.</description>
    <formula>IF(
    NOT(ISBLANK(External_Trainer__c)),
    External_Trainer__r.FirstName &amp;
    IF(NOT(ISBLANK(External_Trainer__r.MiddleName)), &quot; &quot; &amp; External_Trainer__r.MiddleName, &quot;&quot;) &amp;
    &quot; &quot; &amp; External_Trainer__r.LastName,
    IF(
        NOT(ISBLANK(CSM__c)),
        CSM__r.FirstName &amp;
        IF(NOT(ISBLANK(CSM__r.MiddleName)), &quot; &quot; &amp; CSM__r.MiddleName, &quot;&quot;) &amp;
        &quot; &quot; &amp; CSM__r.LastName,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Training Team Member</label>
    <type>Text</type>
</CustomField>