force-app/main/default/objects/Training__c/fields/External_Trainer__c.field-meta.xml
<CustomField>
    <fullName>External_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Trainer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Trainer</value>
        </filterItems>
        <filterItems>
            <field>Account.Do_Not_Use_For_Training__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trainings (External Trainer)</relationshipLabel>
    <relationshipName>Trainings3</relationshipName>
    <type>Lookup</type>
</CustomField>