force-app/main/default/objects/Training__c/fields/Formatted_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Date_of_Birth__c</fullName>
    <description>Displays the Date of Birth field in MM/DD/YYYY format.</description>
    <formula>IF(
    ISBLANK( Account__r.Date_of_Birth__c ),
    &quot;&quot;,
    LPAD(TEXT(MONTH(Account__r.Date_of_Birth__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp;
    LPAD(TEXT(DAY(Account__r.Date_of_Birth__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp;
    TEXT(YEAR(Account__r.Date_of_Birth__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Date of Birth</label>
    <type>Text</type>
</CustomField>