force-app/main/default/objects/Training__c/fields/Internal_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to an internal trainer user like CSM, TM.</description>
    <label>Internal Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Trainers</relationshipName>
    <type>Lookup</type>
</CustomField>