force-app/main/default/objects/Training__c/fields/isRunningUserATrainer__c.field-meta.xml
<CustomField>
    <fullName>isRunningUserATrainer__c</fullName>
    <description>Indicates whether the logged-in user is a Trainer (Internal or External).</description>
    <formula>($User.ContactId != null &amp;&amp;  External_Trainer__c != null &amp;&amp; $User.ContactId == External_Trainer__r.PersonContactId) || (Internal_Trainer__c != null &amp;&amp;  $User.Id ==  Internal_Trainer__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isRunningUserATrainer</label>
    <type>Checkbox</type>
</CustomField>