force-app/main/default/objects/Training__c/fields/Not_Trained_Comments__c.field-meta.xml
<CustomField>
    <fullName>Not_Trained_Comments__c</fullName>
    <description>Captures additional comments when Not Trained Reason is Other.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Not Trained Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>