force-app/main/default/objects/Training__c/fields/Not_Trained_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Trained_Reason__c</fullName>
    <description>Captures the reason for setting the Training&apos;s Stage to Not trained.</description>
    <label>Not Trained Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compatibility/supply issue</fullName>
            </value>
            <value>
                <fullName>Insurance/cost concern</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient deceased</fullName>
            </value>
            <value>
                <fullName>Patient decided on different therapy</fullName>
            </value>
            <value>
                <fullName>Patient health status change</fullName>
            </value>
            <value>
                <fullName>Patient non-responsive</fullName>
            </value>
            <value>
                <fullName>Patient no-show</fullName>
            </value>
            <value>
                <fullName>Patient refused</fullName>
            </value>
            <value>
                <fullName>PTOF not obtained/PCP refusal</fullName>
            </value>
            <value>
                <fullName>Self Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>