force-app/main/default/objects/Training__c/fields/On_Hold_Comments__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Comments__c</fullName>
    <description>Captures additional details for marking the Training On Hold</description>
    <encryptionScheme>None</encryptionScheme>
    <label>On Hold Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>