force-app/main/default/objects/Training__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>Captures the reason for putting the Training On Hold</description>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for HCP/Physician</fullName>
            </value>
            <value>
                <fullName>Waiting for PTOF</fullName>
            </value>
            <value>
                <fullName>Waiting for supplies</fullName>
            </value>
            <value>
                <fullName>Waiting for insurance</fullName>
            </value>
            <value>
                <fullName>Waiting for patient</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>