force-app/main/default/objects/Training__c/fields/Part_of_Group_Training__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Group_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this training record represents a group training session.</description>
    <inlineHelpText>Please indicate if this training was part of group session.</inlineHelpText>
    <label>Part of Group Training</label>
    <type>Checkbox</type>
</CustomField>