force-app/main/default/objects/Training__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient&apos;s Primary Physician.</description>
    <label>Physician</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trainings (Physician)</relationshipLabel>
    <relationshipName>Trainings1</relationshipName>
    <type>Lookup</type>
</CustomField>