force-app/main/default/objects/Training__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Practice</value>
        </filterItems>
        <filterItems>
            <field>Account.Do_Not_Use_For_Training__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trainings (Practice)</relationshipLabel>
    <relationshipName>Trainings2</relationshipName>
    <type>Lookup</type>
</CustomField>