force-app/main/default/objects/Training__c/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <description>The date the medication was shipped to the patient or dispensing location.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>