force-app/main/default/objects/Training__c/fields/Training_Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Training_Communication_Preference__c</fullName>
    <description>Specifies a Patient&apos;s preferred mode of communication for training related updates.</description>
    <label>Training Communication Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>