force-app/main/default/objects/Training__c/fields/Training_Conducted_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Conducted_Date__c</fullName>
    <description>The date on which saline or insulin therapy was initiated for the patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Conducted Date</label>
    <type>Date</type>
</CustomField>