force-app/main/default/objects/Training__c/fields/Training_Language__c.field-meta.xml
<CustomField>
    <fullName>Training_Language__c</fullName>
    <description>Specifies the primary language in which the training is conducted.</description>
    <label>Training Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>