force-app/main/default/objects/Training__c/fields/Training_Observed_by_CPT__c.field-meta.xml
<CustomField>
    <fullName>Training_Observed_by_CPT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the consumer training which the CPT observed that was delivered by the CSM who is training the CPT.</description>
    <label>Training Observed by CPT</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Training__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Live_Training</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>