force-app/main/default/objects/Training__c/fields/Training_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Scheduled_Date__c</fullName>
    <description>The scheduled start date and time of the training.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select the date and time the training will start.</inlineHelpText>
    <label>Training Scheduled Date</label>
    <type>DateTime</type>
</CustomField>