force-app/main/default/objects/Training__c/fields/Training_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Training_Time_Zone__c</fullName>
    <description>The time zone in which the training will take place.</description>
    <inlineHelpText>Choose the time zone where the training will occur. This ensures accurate scheduling for all participants.</inlineHelpText>
    <label>Training Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Zone</valueSetName>
    </valueSet>
</CustomField>