force-app/main/default/objects/Training__c/recordTypes/CPT_Training.recordType-meta.xml
<RecordType>
    <fullName>CPT_Training</fullName>
    <active>true</active>
    <description>Used for Trainer&apos;s training journey.</description>
    <label>CPT Training</label>
</RecordType>