force-app/main/default/objects/Training__c/recordTypes/E_Learning.recordType-meta.xml
<RecordType>
    <fullName>E_Learning</fullName>
    <active>true</active>
    <description>Used for Self Service Trainings</description>
    <label>E-Learning</label>
</RecordType>