force-app/main/default/objects/Training__c/validationRules/Check_Not_Trained_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Not_Trained_Comments</fullName>
    <active>true</active>
    <description>The validation rule ensures that when the Training Stage is set to &quot;Not Trained&quot; and the Not Trained Reason is &quot;Other&quot;, the user must provide a comment in the Not Trained Comments field.</description>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Validation_Rules),
    $Profile.Name != &apos;Trainer Login Based&apos;,
    RecordType.DeveloperName = &apos;Live_Training&apos;,
    ISPICKVAL(Training_Stage__c, &quot;Not Trained&quot;),
    ISPICKVAL(Not_Trained_Reason__c, &quot;Other&quot;),
    ISBLANK(Not_Trained_Comments__c),
 RecordType.DeveloperName  = &apos;Live_Training&apos;
)</errorConditionFormula>
    <errorDisplayField>Not_Trained_Comments__c</errorDisplayField>
    <errorMessage>Please describe the reason the customer was not trained.</errorMessage>
</ValidationRule>