force-app/main/default/objects/Training__c/validationRules/Check_On_Hold_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_On_Hold_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Permission.Bypass_Validation_Rules),
RecordType.DeveloperName = &apos;Live_Training&apos;,
ISPICKVAL(Training_Stage__c, &quot;On Hold&quot;),
ISPICKVAL(On_Hold_Reason__c, &quot;Other&quot;),
ISBLANK(On_Hold_Comments__c)
)</errorConditionFormula>
    <errorDisplayField>On_Hold_Comments__c</errorDisplayField>
    <errorMessage>Please add On Hold Comments for selecting Other to save the record.</errorMessage>
</ValidationRule>