force-app/main/default/objects/Training__c/validationRules/Check_On_Hold_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_On_Hold_Reason</fullName>
    <active>true</active>
    <description>Hold Reason is required when Training Stage is On Hold</description>
    <errorConditionFormula>AND(
NOT($Permission.Bypass_Validation_Rules),
RecordType.DeveloperName = &apos;Live_Training&apos;,
ISPICKVAL(Training_Stage__c, &quot;On Hold&quot;),
ISBLANK(TEXT(On_Hold_Reason__c ))
)</errorConditionFormula>
    <errorDisplayField>On_Hold_Reason__c</errorDisplayField>
    <errorMessage>Please select On Hold Reason to save the record.</errorMessage>
</ValidationRule>