force-app/main/default/objects/Training__c/validationRules/Check_Training_Completion.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Training_Completion</fullName>
    <active>true</active>
    <description>Check to ensure that the training can only be completed when Method, Type, Product, Educator Type and Conducted date are filled.</description>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Validation_Rules),
    RecordType.DeveloperName = &apos;Live_Training&apos;,
    ISPICKVAL( Training_Stage__c , &quot;Completed&quot;),
    OR(
        ISPICKVAL(Training_Method__c, &quot;&quot;),
        ISPICKVAL(Training_Type__c, &quot;&quot;),
        ISPICKVAL(Product__c, &quot;&quot;),
        ISPICKVAL(Educator_Type__c, &quot;&quot;),
        ISBLANK(Training_Conducted_Date__c)
        
    )
)</errorConditionFormula>
    <errorMessage>To complete a training, Method, Type, Product, Educator Type, and Training Conducted Date must be filled.</errorMessage>
</ValidationRule>