force-app/main/default/objects/Training__c/validationRules/Scheduled_Date_Not_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Date_Not_In_Past</fullName>
    <active>true</active>
    <description>Specifies the date when the training is planned to occur; must be a future date if the stage is Scheduled</description>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Validation_Rules),
    RecordType.DeveloperName = &apos;Live_Training&apos;,
    ISPICKVAL(Training_Stage__c, &quot;Scheduled&quot;),
    OR(
        ISBLANK(Training_Scheduled_Date__c),
        DATEVALUE(Training_Scheduled_Date__c) &lt; TODAY()
    )
)</errorConditionFormula>
    <errorDisplayField>Training_Scheduled_Date__c</errorDisplayField>
    <errorMessage>Training Scheduled Date must be a future date and cannot be blank when Training Stage is Scheduled</errorMessage>
</ValidationRule>