force-app/main/default/objects/Training__c/validationRules/Training_Conducted_Date_Not_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Training_Conducted_Date_Not_In_Future</fullName>
    <active>true</active>
    <description>Check to ensure that Training Conducted Date is not be a future date.</description>
    <errorConditionFormula>AND(
NOT($Permission.Bypass_Validation_Rules),
OR(
RecordType.DeveloperName = &apos;Live_Training&apos;,
RecordType.DeveloperName = &apos;E_Learning&apos;
),
Training_Conducted_Date__c &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Training_Conducted_Date__c</errorDisplayField>
    <errorMessage>Training Conducted Date must not be a future date.</errorMessage>
</ValidationRule>