force-app/main/default/objects/Training__c/listViews/Available_Training.listView-meta.xml
<ListView>
    <fullName>Available_Training</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Training_Type__c</columns>
    <columns>CSM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Educator_Type__c</field>
        <operation>equals</operation>
        <value>CTS</value>
    </filters>
    <filters>
        <field>Training_Stage__c</field>
        <operation>equals</operation>
        <value>Pending Acceptance</value>
    </filters>
    <label>Available Trainings</label>
    <sharedTo>
        <group>Spanish_Speaking_CTS</group>
    </sharedTo>
</ListView>