force-app/main/default/objects/Training__c/listViews/External_Trainings_in_My_Territory.listView-meta.xml
<ListView>
    <fullName>External_Trainings_in_My_Territory</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>External_Trainer__c</columns>
    <columns>Educator_Type__c</columns>
    <columns>Training_Stage__c</columns>
    <columns>Training_Type__c</columns>
    <columns>Practice__c</columns>
    <columns>CSM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Training_Stage__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>External_Trainer__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>External Trainings in My Territory</label>
    <sharedTo>
        <role>Clinical_Services_Manager</role>
    </sharedTo>
</ListView>