force-app/main/default/objects/Training__c/listViews/My_Trainings.listView-meta.xml
<ListView>
    <fullName>My_Trainings</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Ship_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Physician__c</columns>
    <columns>Practice__c</columns>
    <columns>CSM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Training_Stage__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <filters>
        <field>isRunningUserATrainer__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Trainings</label>
</ListView>